YAMLs/002_swagger-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swagger-ui
  labels:
    app: swagger-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: swagger-ui
  template:
    metadata:
      labels:
        app: swagger-ui
    spec:
      containers:
      - name: swagger-ui
        image: swaggerapi/swagger-ui:v5.1.0
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: kc-swagger
          mountPath: /usr/share/nginx/html/openapis
      volumes:
        - name: kc-swagger
          configMap:
            name: kc-swagger
            items:
              - key: swagger
                path: kc-api-configmap.yaml
