YAMLs/004_swagger-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: swagger-ui
spec:
  hosts:
  - "*"
  gateways:
  - gh-gateway
  http:
  - match:
    - uri:
        prefix: /swagger-fosps
    route:
    - destination:
        host: swagger-ui.default.svc.cluster.local
        port:
          number: 8080
